[package]
name = "hallings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For debugging and logging
web-sys = {version = "0.3.60", features=["HtmlElement", "HtmlCollection","Element", "Event", "EventTarget", "CssStyleDeclaration"]}
yew = { version = "0.20", features = ["ssr", "csr"] }
wasm-bindgen = "0.2.83"
gloo-events = "0.1.2"
wasm-bindgen-test = "0.3.33"
gloo = "0.3"
wasm-bindgen-futures = "0.4.33"
gloo-utils = "0.1.2"
nom = "7"
