[package]
name = "hallings"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Styling framework for Yew ✂"
homepage = "https://github.com/davidstyrbjorn/hallings"
documentation = "https://github.com/davidstyrbjorn/hallings"
repository = "https://github.com/davidstyrbjorn/hallings"
readme = "README.md"
keywords = ["web", "yew", "UI", "library", "wasm"]

[dependencies]
# For debugging and logging
web-sys = { version = "0.3.69", features = [
    "HtmlElement",
    "HtmlCollection",
    "HtmlInputElement",
    "Element",
    "Event",
    "EventTarget",
    "CssStyleDeclaration",
] }
yew = { version = "0.20", features = ["ssr", "csr"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"
wasm-bindgen-futures = "0.4.42"
gloo-utils = "0.2.0"
